--- a/frontend/src/pages/user/ContractDetail/ContractDetailPage.module.css
+++ b/frontend/src/pages/user/ContractDetail/ContractDetailPage.module.css
@@ -1,9 +1,9 @@
 .page {
   display: grid;
-  grid-template-columns: minmax(300px, 400px) 1fr;
+  grid-template-columns: minmax(600px, 750px) 1fr;
   gap: 16px;
   min-height: 100vh;
-  padding-top: 190px;
+  padding: 130px 30px 0px 30px;
   max-width: 100%;
   margin: 0 auto;
   overflow-x: hidden; /* Ngăn tràn ngang toàn page */
